--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "elasticsearch": "~8.0.1",
     "jquery": "~2.1.4",
-    "react": "~0.13.3"
+    "react": "~0.13.3",
+    "bootstrap": "~3.3.5"
   }
 }
